--- a/assets/css/responseAppForm/adminTable.css
+++ b/assets/css/responseAppForm/adminTable.css
@@ -7,7 +7,7 @@
 
 /* table */
 .table-users {
-   min-width: 70%;
+   min-width: 85%;
 }
 .tb-header {
    background-color: var(--baseColor);
@@ -22,35 +22,41 @@
    border: 1px solid var(--baseColor);
    border-radius: var(--borderRadius);
    box-shadow: 3px 3px 0 rgba(0,0,0,0.1);
-   max-width: calc(100% - 2rem);
+   max-width: 100%;
    overflow: hidden;
 }
 
-table {
+.table {
    width: 100%;
 }
-td, th { 
+.table p { 
    color: var(--baseColor) !important;
    padding: var(--padding) !important;
 }
-td {
+.tbody p {
    background-color: transparent !important;
    text-align: center;
    vertical-align: middle;
 }
-td:last-child {
+.tbody div {
+   background: transparent;
+}
+.tbody p{
+   overflow-x: auto;
+}
+.tbody p:last-child {
    font-size: 0.95rem;
    line-height: 1.4;
 /*   text-align: left;*/
 };
-th { 
+.tb-title p { 
    background-color: var(--baseColor);
    font-weight: 300;
 }
-tr:nth-child(2n)  {
+.appForm:nth-child(2n)  {
    background-color: white;
 }
-.title th{
+.tb-title p {
    background-color: transparent !important;
 }
 .appForm:nth-child(2n+1), .title {
